Fixed an overflow/scrolling issue in the preview popup

--- a/src/devtools/client/debugger/src/components/Editor/Preview/NewObjectInspector.module.css
+++ b/src/devtools/client/debugger/src/components/Editor/Preview/NewObjectInspector.module.css
@@ -2,10 +2,12 @@
   color: var(--color-default);
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  max-height: 250px !important;
+  max-width: 400px;
+  overflow: auto;
 }
 
 .Inspector {
-  max-height: 250px;
-  max-width: 400px;
-  overflow: auto;
+  overflow: initial;
 }
